--- a/index.html
+++ b/index.html
@@ -236,9 +236,14 @@
 					<p class="contact"><img src="img/mapb.png" width="30" height="30" />FRANCE</p>
 					<p class="contact1">
 						Mathieu Baudonnat<br/>
-						47000 Agen<br/>
+						33000 Bordeaux<br/>
 						Tel:+ 44 795 661 5559
 					</p>
+				</div>
+				
+				<div class="social">
+					<a href="http://github.com/dans-lweb"><img src="img/github_white.png"></a>
+					<p>Suivez moi sur GitHub</p>
 				</div>
 			</div>
 
