--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 				
 				<div class="social">
 					<a href="http://github.com/dans-lweb"><img src="img/github_white.png"></a>
-					<p>Suivez moi sur GitHub</p>
+					<p class="contact1">Suivez moi sur GitHub</p>
 				</div>
 			</div>
 
