Resolution bug CSS sur le lien github

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 				</div>
 				
 				<div class="social">
-					<a href="http://github.com/dans-lweb"><img src="img/github_white.png"></a>
+					<a href="http://github.com/dans-lweb" target="_blank"><img src="img/github_white.png"></a>
 					<p class="contact1">Suivez moi sur GitHub</p>
 				</div>
 			</div>
